--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
-build/*
-dist/*
-setup/.DS_Store
 .DS_Store
-nbproject/private/*
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+nbactions.xml
+nb-configuration.xml
